<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.picker.www.PickerProbador.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cl.picker.www.PickerProbador.Login"
        android:background="@drawable/fondo">

        <ImageView
            android:id="@+id/logo_login"
            style="@style/logo_style"
            android:src="@drawable/logo"
            android:paddingTop="20dp"/>

        <TextView
            android:id="@+id/textview_probador"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_probador"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/logo_login"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/email_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/textview_probador"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/arroba"
            android:hint="@string/hint_email" />

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/password_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_login"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/hint_password"/>
        <Button
            android:id="@+id/btn_login_fragment"
            style="@style/ButtonStyle"
            android:background="@drawable/onpress_button"
            android:layout_below="@+id/password_login"
            android:text="@string/boton_ingresar"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"/>

    </RelativeLayout>


</FrameLayout>
